Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/audio/in_arbeit/pas/gstaudioringbuffer.pas


{*
 * GstAudioRingBufferClass:
 * @parent_class: parent class
 * @open_device:  open the device, don't set any params or allocate anything
 * @acquire: allocate the resources for the ringbuffer using the given spec
 * @release: free resources of the ringbuffer
 * @close_device: close the device
 * @start: start processing of samples
 * @pause: pause processing of samples
 * @resume: resume processing of samples after pause
 * @stop: stop processing of samples
 * @delay: get number of frames queued in device
 * @activate: activate the thread that starts pulling and monitoring the
 * consumed segments in the device.
 * @commit: write samples into the ringbuffer
 * @clear_all: Optional.
 *             Clear the entire ringbuffer.
 *             Subclasses should chain up to the parent implementation to
 *             invoke the default handler.
 *
 * The vmethods that subclasses can override to implement the ringbuffer.
  }
{< public > }
{ ABI added  }
{< private > }
  PGstAudioRingBufferClass = ^TGstAudioRingBufferClass;
  TGstAudioRingBufferClass = record
      parent_class : TGstObjectClass;
      open_device : function (buf:PGstAudioRingBuffer):Tgboolean;cdecl;
      acquire : function (buf:PGstAudioRingBuffer; spec:PGstAudioRingBufferSpec):Tgboolean;cdecl;
      release : function (buf:PGstAudioRingBuffer):Tgboolean;cdecl;
      close_device : function (buf:PGstAudioRingBuffer):Tgboolean;cdecl;
      start : function (buf:PGstAudioRingBuffer):Tgboolean;cdecl;
      pause : function (buf:PGstAudioRingBuffer):Tgboolean;cdecl;
      resume : function (buf:PGstAudioRingBuffer):Tgboolean;cdecl;
      stop : function (buf:PGstAudioRingBuffer):Tgboolean;cdecl;
      delay : function (buf:PGstAudioRingBuffer):Tguint;cdecl;
      activate : function (buf:PGstAudioRingBuffer; active:Tgboolean):Tgboolean;cdecl;
      commit : function (buf:PGstAudioRingBuffer; sample:Pguint64; data:Pguint8; in_samples:Tgint; out_samples:Tgint; 
                   accum:Pgint):Tguint;cdecl;
      clear_all : procedure (buf:PGstAudioRingBuffer);cdecl;
      _gst_reserved : array[0..(GST_PADDING)-1] of Tgpointer;
    end;


function gst_audio_ring_buffer_get_type:TGType;cdecl;external libgstaudio;
{ callback stuff  }
procedure gst_audio_ring_buffer_set_callback(buf:PGstAudioRingBuffer; cb:TGstAudioRingBufferCallback; user_data:Tgpointer);cdecl;external libgstaudio;
procedure gst_audio_ring_buffer_set_callback_full(buf:PGstAudioRingBuffer; cb:TGstAudioRingBufferCallback; user_data:Tgpointer; notify:TGDestroyNotify);cdecl;external libgstaudio;
function gst_audio_ring_buffer_parse_caps(spec:PGstAudioRingBufferSpec; caps:PGstCaps):Tgboolean;cdecl;external libgstaudio;
procedure gst_audio_ring_buffer_debug_spec_caps(spec:PGstAudioRingBufferSpec);cdecl;external libgstaudio;
procedure gst_audio_ring_buffer_debug_spec_buff(spec:PGstAudioRingBufferSpec);cdecl;external libgstaudio;
function gst_audio_ring_buffer_convert(buf:PGstAudioRingBuffer; src_fmt:TGstFormat; src_val:Tgint64; dest_fmt:TGstFormat; dest_val:Pgint64):Tgboolean;cdecl;external libgstaudio;
{ device state  }
function gst_audio_ring_buffer_open_device(buf:PGstAudioRingBuffer):Tgboolean;cdecl;external libgstaudio;
function gst_audio_ring_buffer_close_device(buf:PGstAudioRingBuffer):Tgboolean;cdecl;external libgstaudio;
function gst_audio_ring_buffer_device_is_open(buf:PGstAudioRingBuffer):Tgboolean;cdecl;external libgstaudio;
{ allocate resources  }
function gst_audio_ring_buffer_acquire(buf:PGstAudioRingBuffer; spec:PGstAudioRingBufferSpec):Tgboolean;cdecl;external libgstaudio;
function gst_audio_ring_buffer_release(buf:PGstAudioRingBuffer):Tgboolean;cdecl;external libgstaudio;
function gst_audio_ring_buffer_is_acquired(buf:PGstAudioRingBuffer):Tgboolean;cdecl;external libgstaudio;
{ set the device channel positions  }
procedure gst_audio_ring_buffer_set_channel_positions(buf:PGstAudioRingBuffer; position:PGstAudioChannelPosition);cdecl;external libgstaudio;
{ activating  }
function gst_audio_ring_buffer_activate(buf:PGstAudioRingBuffer; active:Tgboolean):Tgboolean;cdecl;external libgstaudio;
function gst_audio_ring_buffer_is_active(buf:PGstAudioRingBuffer):Tgboolean;cdecl;external libgstaudio;
{ flushing  }
procedure gst_audio_ring_buffer_set_flushing(buf:PGstAudioRingBuffer; flushing:Tgboolean);cdecl;external libgstaudio;
function gst_audio_ring_buffer_is_flushing(buf:PGstAudioRingBuffer):Tgboolean;cdecl;external libgstaudio;
{ playback/pause  }
function gst_audio_ring_buffer_start(buf:PGstAudioRingBuffer):Tgboolean;cdecl;external libgstaudio;
function gst_audio_ring_buffer_pause(buf:PGstAudioRingBuffer):Tgboolean;cdecl;external libgstaudio;
function gst_audio_ring_buffer_stop(buf:PGstAudioRingBuffer):Tgboolean;cdecl;external libgstaudio;
procedure gst_audio_ring_buffer_set_errored(buf:PGstAudioRingBuffer);cdecl;external libgstaudio;
{ get status  }
function gst_audio_ring_buffer_delay(buf:PGstAudioRingBuffer):Tguint;cdecl;external libgstaudio;
function gst_audio_ring_buffer_samples_done(buf:PGstAudioRingBuffer):Tguint64;cdecl;external libgstaudio;
procedure gst_audio_ring_buffer_set_sample(buf:PGstAudioRingBuffer; sample:Tguint64);cdecl;external libgstaudio;
{ clear all segments  }
procedure gst_audio_ring_buffer_clear_all(buf:PGstAudioRingBuffer);cdecl;external libgstaudio;
{ commit samples  }
function gst_audio_ring_buffer_commit(buf:PGstAudioRingBuffer; sample:Pguint64; data:Pguint8; in_samples:Tgint; out_samples:Tgint; 
           accum:Pgint):Tguint;cdecl;external libgstaudio;
{ read samples  }
function gst_audio_ring_buffer_read(buf:PGstAudioRingBuffer; sample:Tguint64; data:Pguint8; len:Tguint; timestamp:PGstClockTime):Tguint;cdecl;external libgstaudio;
{ Set timestamp on buffer  }
procedure gst_audio_ring_buffer_set_timestamp(buf:PGstAudioRingBuffer; readseg:Tgint; timestamp:TGstClockTime);cdecl;external libgstaudio;
{ mostly protected  }
{ not yet implemented
gboolean        gst_audio_ring_buffer_prepare_write   (GstAudioRingBuffer *buf, gint *segment, guint8 **writeptr, gint *len);
 }
function gst_audio_ring_buffer_prepare_read(buf:PGstAudioRingBuffer; segment:Pgint; readptr:PPguint8; len:Pgint):Tgboolean;cdecl;external libgstaudio;
procedure gst_audio_ring_buffer_clear(buf:PGstAudioRingBuffer; segment:Tgint);cdecl;external libgstaudio;
procedure gst_audio_ring_buffer_advance(buf:PGstAudioRingBuffer; advance:Tguint);cdecl;external libgstaudio;
procedure gst_audio_ring_buffer_may_start(buf:PGstAudioRingBuffer; allowed:Tgboolean);cdecl;external libgstaudio;
procedure gst_audio_ring_buffer_set_segdone(buf:PGstAudioRingBuffer; segdone:Tguint64);cdecl;external libgstaudio;
function gst_audio_ring_buffer_get_segdone(buf:PGstAudioRingBuffer):Tguint64;cdecl;external libgstaudio;
function gst_audio_ring_buffer_get_segbase(buf:PGstAudioRingBuffer):Tguint64;cdecl;external libgstaudio;
{//////////////G_DEFINE_AUTOPTR_CLEANUP_FUNC        (GstAudioRingBuffer, gst_object_unref) }
{$endif}
{ __GST_AUDIO_RING_BUFFER_H__  }

// === Konventiert am: 16-7-26 15:24:57 ===


implementation


{ was #define dname def_expr }
function GST_TYPE_AUDIO_RING_BUFFER : longint; { return type might be wrong }
  begin
    GST_TYPE_AUDIO_RING_BUFFER:=gst_audio_ring_buffer_get_type;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER(obj : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER:=G_TYPE_CHECK_INSTANCE_CAST(obj,GST_TYPE_AUDIO_RING_BUFFER,GstAudioRingBuffer);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_CLASS(klass : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_CLASS:=G_TYPE_CHECK_CLASS_CAST(klass,GST_TYPE_AUDIO_RING_BUFFER,GstAudioRingBufferClass);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_GET_CLASS(obj : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_GET_CLASS:=G_TYPE_INSTANCE_GET_CLASS(obj,GST_TYPE_AUDIO_RING_BUFFER,GstAudioRingBufferClass);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function GST_AUDIO_RING_BUFFER_CAST(obj : longint) : PGstAudioRingBuffer;
begin
  GST_AUDIO_RING_BUFFER_CAST:=PGstAudioRingBuffer(obj);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_IS_AUDIO_RING_BUFFER(obj : longint) : longint;
begin
  GST_IS_AUDIO_RING_BUFFER:=G_TYPE_CHECK_INSTANCE_TYPE(obj,GST_TYPE_AUDIO_RING_BUFFER);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_IS_AUDIO_RING_BUFFER_CLASS(klass : longint) : longint;
begin
  GST_IS_AUDIO_RING_BUFFER_CLASS:=G_TYPE_CHECK_CLASS_TYPE(klass,GST_TYPE_AUDIO_RING_BUFFER);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_SPEC_FORMAT_TYPE(spec : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_SPEC_FORMAT_TYPE:=spec^._type;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_SPEC_INFO(spec : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_SPEC_INFO:=spec^.info;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_SPEC_LATENCY_TIME(spec : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_SPEC_LATENCY_TIME:=spec^.latency_time;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_SPEC_BUFFER_TIME(spec : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_SPEC_BUFFER_TIME:=spec^.buffer_time;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_SPEC_SEGSIZE(spec : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_SPEC_SEGSIZE:=spec^.segsize;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_SPEC_SEGTOTAL(spec : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_SPEC_SEGTOTAL:=spec^.segtotal;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_SPEC_SEGLATENCY(spec : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_SPEC_SEGLATENCY:=spec^.seglatency;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_SPEC_DSD_FORMAT(spec : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_SPEC_DSD_FORMAT:=spec^.(ABI.(abi.dsd_format));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_GET_COND(buf : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_GET_COND:=@((PGstAudioRingBuffer(buf))^.cond);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_WAIT(buf : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_WAIT:=g_cond_wait(GST_AUDIO_RING_BUFFER_GET_COND(buf),GST_OBJECT_GET_LOCK(buf));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_SIGNAL(buf : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_SIGNAL:=g_cond_signal(GST_AUDIO_RING_BUFFER_GET_COND(buf));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_AUDIO_RING_BUFFER_BROADCAST(buf : longint) : longint;
begin
  GST_AUDIO_RING_BUFFER_BROADCAST:=g_cond_broadcast(GST_AUDIO_RING_BUFFER_GET_COND(buf));
end;

